@@ -17,15 +17,12 @@ Little annoying stuff:
 - Plugin Documentation:
 	- Labels are now attached to components instead of menu-entries. Update documentation.
 
-- Command editor windows:
-	- indicate unsaved modifications with (*) or icon
-	- update caption after Save As
-
 Configuration options to add:
 	- additional console options:
 		- color highlighting for warnings/errors (once we can identify them reliably)
 	- additional R engine options:
 		- stack size (commandline arg --map-ppsize)
+		- disable html help
 	- new dataeditor options:
 		- see below: comments on RKEditorDataFrame
 
